tests/compile-fail/unaligned_pointers/atomic_unaligned.stderr
error: Undefined Behavior: accessing memory with alignment 4, but alignment 8 is required
  --> $DIR/atomic_unaligned.rs:10:9
   |
LL |         ::std::intrinsics::atomic_load(zptr);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ accessing memory with alignment 4, but alignment 8 is required
   |
   = help: this usually indicates that your program performed an invalid operation and caused Undefined Behavior
   = help: but due to `-Zmiri-symbolic-alignment-check`, alignment errors can also be false positives
           
   = note: inside `main` at $DIR/atomic_unaligned.rs:10:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

